<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="24dp"
        android:paddingTop="100dp"
        android:paddingRight="24dp"
        tools:ignore="MissingConstraints">

        <ImageView
            android:id="@+id/mushroom"
            android:layout_width="wrap_content"
            android:layout_height="72dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="24dp"
            android:src="@drawable/mushroom"
            tools:ignore="ContentDescription" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:hint="@string/name_hint"
                android:inputType="number" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Password Label -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:hint="@string/password_hint"
                android:nextFocusUp="@string/login_title"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/rm_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="30dp"
                android:checked="false"
                android:text="@string/remember_password" />

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/au_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:text="@string/auto_login" />
        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_login"
            android:layout_width="85dp"
            android:layout_height="85dp"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="10dp"
            android:insetLeft="0dp"
            android:insetBottom="0dp"
            android:insetRight="0dp"
            android:insetTop="0dp"
            android:layout_gravity="center"
            app:cornerRadius="100dp"
            android:padding="0dp"
            android:backgroundTint="@color/mushroom"
            android:text="@string/login_title" />

        <com.github.ybq.android.spinkit.SpinKitView
            android:id="@+id/progress"
            style="@style/SpinKitView.Large.Circle"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="0dp"
            android:layout_width="85dp"
            android:layout_height="85dp"
            android:layout_gravity="center"
            android:visibility="gone"
            app:SpinKit_Color="@color/mushroom" />

    </LinearLayout>
    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/coordinator"/>


</androidx.constraintlayout.widget.ConstraintLayout>
